05-blue-green-strategy/web-blue/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: robokart
    namespace: robokart
    annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/tags: Environment=dev,version=blue,Project=robokart
        alb.ingress.kubernetes.io/group.name: robokart
spec:
  ingressClassName: alb
  rules:
  - host: "robokart.royalreddy.site"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
